--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Mi pagina Nueva</title>
+
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+
 </head>
 <body>
 	<h1>Mi Pagina</h1>
